--- a/index.html
+++ b/index.html
@@ -1,109 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Calender</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="html/node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/modalStyle.css">
+    <title>Calender</title>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Edgar's Calendar</a>
+            <a class="navbar-brand" href="index2.html" id="userWelcome">Edgar's Calendar</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li class="hide" id="calendarButton"><a href="html/gridCalender.html">Calendar</a></li>
+            <li><a href="index2.html">Home</a></li>
+            <li class="active"><a href="index.html">Calendar</a></li>
         </ul>
     </div>
 </nav>
 
 
-<div class="container-fluid" id="userForm">
-    <div class="row">
-        <div class="col-sm-2">
+<!--<div class="container-fluid" id="userForm">-->
+    <!--<div class="row">-->
+        <!--<div class="col-sm-2">-->
+        <!--</div>-->
+        <!--<div class="col-sm-8 centered formBorder">-->
+            <!--<label for="userN">UserName</label>-->
+            <!--<input type="text" id="userN">-->
+            <!--<label for="pass">Password:</label>-->
+            <!--<input type="password" id="pass">-->
+            <!--<div class="alert alert-danger hide" id="errorMessage">-->
+                <!--<strong>Invalid userName and/or password!</strong> Please try again.-->
+            <!--</div>-->
+            <!--<div>-->
+                <!--<button class="btn btn-info" onclick="postNamePass()">Click to send</button>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-2 buttonRight" style="text-align: left">-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<!--startModal-->
+<div class="container-fluid">
+<div class="overlay is-hidden" id="overlay">
+    <div class="modal-content">
+        <span class="button-close" onclick="closeModal();"></span>
+        <div class="modalHeader">
+            <p id="modalHeader" class="centered"></p>
         </div>
-        <div class="col-sm-8 centered formBorder">
-            <label for="userN">UserName</label>
-            <input type="text" id="userN">
-            <label for="pass">Password:</label>
-            <input type="password" id="pass">
-            <div class="alert alert-danger hide" id="errorMessage">
-                <strong>Invalid userName and/or password!</strong> Please try again.
+
+        <div class="row centered">
+            <!--<h3 id="modalHour" >Click on hour to add events</h3>-->
+
+            <div id="modalInput" class=" eventInput">
+                <!--<h3 id="modalHour"></h3>-->
+                <h3 id="modalHour" >Click on hour to add events</h3>
+
+                <input type="text" id="modalInputText" placeholder="Add Event" width="60">
+                <button id="saveButton" class="btn btn-info" onclick="saveEvent()">Save <i class="fa fa-file"></i></button>
             </div>
-            <div>
-                <button class="btn btn-info" onclick="postNamePass()">Log In</button>
+             <div class="col-sm-4">
+              <ul id="unList1" class="nav nav-pills nav-stacked">
+                </ul>
+             </div>
+            <div class="col-sm-4">
+              <ul id="unList2" class="nav nav-pills nav-stacked">
+                </ul>
+             </div>
+            <div class="col-sm-4">
+                <ul id="unList3" class="nav nav-pills nav-stacked">
+                </ul>
             </div>
         </div>
-        <div class="col-sm-2 buttonRight" style="text-align: left">
+        <div id="modalEvents" class=" eventDiv">
+            <p>Events:</p>
+            <ol id="modalList">
+            </ol>
         </div>
+        <!--<div id="modalInput" class="row centered modal-header hide">-->
+                <!--<h3 id="modalHour"></h3>-->
+           <!--<input type="text" id="modalInputText" placeholder="Add Event" width="60">-->
+            <!--<button class="btn btn-info" onclick="saveEvent()">Save <i class="fa fa-file" aria-hidden="true"></i></button>-->
+        <!--</div>-->
+
     </div>
 </div>
+</div>
+<!--endModal-->
+<div id="tableContainer" class="container tableColor ">
+    <!--<div id="tableContainer" class="container tableColor ">-->
+    <div class="centered">
+        <h1  class="monthHeading" id="monthId"></h1>
+        <!--<h1 style="visibility: hidden;" class="monthHeading" id="monthId2"></h1>-->
+    </div>
+    <div class="table-responsive" id="tableDiv">
+        <!--My table created with js will go here-->
+        <!--**************************************-->
+    </div>
 
-<div class="container-fluid">
-    <div class="row">
+    <div id="buttonSelect" class="row">
         <div class="col-sm-4">
+            <button class="btn btn-success" onclick="prevMonth()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Previous Month</button>
         </div>
         <div class="col-sm-4 centered">
-            <h1>My Calender Project</h1><br>
-
+            <div class="whiteFont" id="userTimeNear"><h1></h1></div>
+            <!--<button class="btn btn-danger" onclick="clearLocalStorage()">Clear Local Storage</button>-->
         </div>
         <div class="col-sm-4 buttonRight">
-            <br>
-            <div class="row centered"><h4>By Edgar Isla-Navarro</h4></div>
-            <div class="row centered"><h4>CS 2550</h4></div>
+            <button class="btn btn-success"  onclick="nextMonth()">Next Month <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
         </div>
     </div>
 </div>
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
 
-
-</body>
-
-<div class="container-fluid centered">
-    <div  class="row centered">
-        <!--<div class="col-sm-6 descriptionDivs alignLeft" >-->
-            <!--<h1>Description</h1>-->
-            <!--<br>-->
-            <!--<h3>User will be able to:</h3>-->
-            <!--<ul>-->
-                <!--<li>View full month calender.</li>-->
-                <!--<li>Switch between months </li>-->
-                <!--<li>Add events to any day of the month</li>-->
-                <!--<li> If there are events for particular day. They will show up in the full month calender.</li>-->
-                <!--<li>When adding an event, a new window with a table for the particular day will show up.</li>-->
-                <!--<li>Be able to edit and erase previous events.</li>-->
-            <!--</ul>-->
-        <!--</div>-->
-        <!--<div class="col-sm-6 descriptionDivs">-->
-                <!--<h1>Preliminary Software Design</h1>-->
-                <!--<h2>Model</h2>-->
-
-            <!--<p>A placeholder for user input.  This will be events in the calender.  example: document.getElementById("userInput").value= myStorageVar;</p>-->
-                <!--<button class="btn btn-success " onclick="location.href = 'html/gridCalender.html';">View My Calender (Separate Window)</button>-->
-
-        <!--</div>-->
-        <div class="col-sm-12 descriptionDivs">
-            <h1></h1>
-            <h2>Logic</h2>
-
-            <p>*User is able to click on specific day. done</p>
-            <p>*User is able to click on a specific hour to add event. done</p>
-            <p>*User is able to save (console log for now). done</p>
-            <p>*Store in the future input and date of events in local memory or cookies.</p>
-            <p>*Figure out how to clear table and when changing months put the correct date in each cell.</p>
-            <p>*Be able to not only present current year but previous and forthcoming years</p>
-            <p>*Be  able to inform the user how if he was current events that are coming up.</p>
-            <!--<button class="btn btn-success " onclick="location.href = 'html/gridCalender.html';">View My Calender (Separate Window)</button>-->
-
-        </div>
-
-    </div>
-</div>
-
+</nav>
+<script src="js/ControllerView.js"></script>
+<script src="js/model.js"></script>
+<script src="js/modal.js"></script>
 <script src="js/formAjax.js"></script>
+<script src="js/getJSON.js"></script>
+
+
+
 
 </body>
 </html>
