--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="navbar-brand" href="index2.html" id="userWelcome">Edgar's Calendar</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="index2.html">Home</a></li>
+            <!--<li><a href="index2.html">Home</a></li>-->
             <li class="active"><a href="index.html">Calendar</a></li>
         </ul>
     </div>
