--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index2.html" id="userWelcome">Edgar's Calendar</a>
+            <a class="navbar-brand" href="index.html" id="userWelcome">Edgar's Calendar</a>
         </div>
         <ul class="nav navbar-nav">
             <!--<li><a href="index2.html">Home</a></li>-->
